Fixes page header error layout issues
By insuring the logo has enough room and the error takes up the
rest of the space.

--- a/src/css/components/panel-dep.scss
+++ b/src/css/components/panel-dep.scss
@@ -30,6 +30,10 @@ $panel-padding: $grid-3;
   display: flex;
   justify-content: space-between;
   padding-bottom: $grid-1;
+
+  .error-inline {
+    width: auto;
+  }
 }
 
 .panel-row-header {
